setup-scripts/66-opencloud/opencloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencloud
  namespace: opencloud
  labels:
    app: opencloud  
spec:
  selector:
    matchLabels:
      app: opencloud
  replicas: 1
  template:
    metadata:
      labels:
        app: opencloud
      annotations:
        backup.velero.io/backup-volumes: opencloud-data
    spec:
      containers:
      - name: opencloud
        image: "opencloudeu/opencloud-rolling:latest"
        volumeMounts:
          - name: opencloud-config
            mountPath: /etc/opencloud
          - name: opencloud-data
            mountPath: /var/lib/opencloud                  
      volumes:
        - name: opencloud-config
          persistentVolumeClaim:
            claimName: opencloud-config-pvc
        - name: opencloud-data
          persistentVolumeClaim:
            claimName: opencloud-data-pvc
