setup-scripts/66-opencloud/opencloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencloud-service
  namespace: opencloud
  labels:
    app: opencloud
spec:
  selector:
    app: opencloud
  ports:
  - name: http
    port: 80
    targetPort: 9280
    protocol: TCP  
  - name: https
    port: 443
    protocol: TCP
    targetPort: 9200
